--- a/BancoMexicoWeb/Views/Home/Index.cshtml
+++ b/BancoMexicoWeb/Views/Home/Index.cshtml
@@ -1,7 +1,47 @@
-﻿
-@{
-    ViewData["Title"] = "Index";
-}
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="~/css/estilos.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+   
+    <title>Document</title>
+</head>
+<body>
+    <div class="wrapper">
+        <div class="container main">
+            <div class="row">
+                <div class="col-md-6 side-image">
 
-<h1>Index</h1>
+                    <img src="~/imagenes/banco.jpg" alt="" class="login__imagen">
 
+                </div>
+                <div class="col-md-6 right">
+
+                    <div class="input-box">
+
+                        <header>Create account</header>
+                        <div class="input-field">
+                            <input type="text" class="input" id="email" required="" autocomplete="off">
+                            <label for="email">Email</label>
+                        </div>
+                        <div class="input-field">
+                            <input type="password" class="input" id="pass" required="">
+                            <label for="pass">Password</label>
+                        </div>
+                        <div class="input-field">
+
+                            <input type="submit" class="submit" value="Sign Up">
+                        </div>
+                        <div class="signin">
+                            <span>Already have an account? <a href="#">Log in here</a></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
