--- a/BancoMexicoWeb/wwwroot/css/estilos.css
+++ b/BancoMexicoWeb/wwwroot/css/estilos.css
@@ -1,180 +1,90 @@
-/* POPPINS FONT */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-
-* {
-    font-family: 'Poppins', sans-serif;
-}
-
-.wrapper {
-    background: #ececec;
-    padding: 0 20px 0 20px;
-}
-
-.main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-}
-
-.side-image {
-    background-image: url("images/2.jpg");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    border-radius: 10px 0 0 10px;
-    position: relative;
-}
-
-.row {
-    width: 900px;
-    height: 550px;
-    border-radius: 10px;
-    background: #fff;
-    padding: 0px;
-    box-shadow: 5px 5px 10px 1px rgba(0,0,0,0.2);
-}
-
-.text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-    .text p {
-        color: #fff;
-        font-size: 20px;
-    }
-
-i {
-    font-weight: 400;
-    font-size: 15px;
-}
-
-.right {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
-
-.input-box {
-    width: 330px;
+*,
+*:before,
+*:after {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
-
-.input-box header {
-    font-weight: 700;
-    text-align: center;
-    margin-bottom: 45px;
+body {
+    background-color: #fff;
 }
 
-.input-field {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    padding: 0 10px 0 10px;
-}
-
-.input {
-    height: 45px;
-    width: 100%;
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    outline: none;
-    margin-bottom: 20px;
-    color: #40414a;
-}
-
-.input-box .input-field label {
+.background {
+    width: 430px;
+    height: 520px;
     position: absolute;
-    top: 10px;
-    left: 10px;
-    pointer-events: none;
-    transition: .5s;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
 }
 
-.input-field input:focus ~ label {
-    top: -10px;
-    font-size: 13px;
+form {
+    height: 520px;
+    width: 400px;
+    background-color: #54A0F0;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    padding: 50px 35px;
 }
 
-.input-field input:valid ~ label {
-    top: -10px;
-    font-size: 13px;
-    color: #5d5076;
-}
-
-.input-field .input:focus, .input-field .input:valid {
-    border-bottom: 1px solid #743ae1;
-}
-
-.submit {
-    border: none;
-    outline: none;
-    height: 45px;
-    background: #ececec;
-    border-radius: 5px;
-    transition: .4s;
-}
-
-    .submit:hover {
-        background: rgba(37, 95, 156, 0.937);
-        color: #fff;
+    form * {
+        font-family: 'Poppins', sans-serif;
+        color: #ffffff;
+        letter-spacing: 0.5px;
+        outline: none;
+        border: none;
     }
 
-.signin {
-    text-align: center;
-    font-size: small;
-    margin-top: 25px;
-}
-
-span a {
-    text-decoration: none;
-    font-weight: 700;
-    color: #000;
-    transition: .5s;
-}
-
-    span a:hover {
-        text-decoration: underline;
-        color: #000;
-    }
-
-    .login__imagen{
-                width: 100%;
-        height: 100%;
-        object-fit: cover;
-    
-    }
-
-@media only screen and (max-width: 768px) {
-    .side-image {
-        border-radius: 10px 10px 0 0;
-    }
-
-    img {
-        width: 35px;
-        position: absolute;
-        top: 20px;
-        left: 47%;
-    }
-
-    .text {
-        position: absolute;
-        top: 70%;
+    form h3 {
+        font-size: 32px;
+        font-weight: 500;
+        line-height: 42px;
         text-align: center;
     }
 
-        .text p, i {
-            font-size: 16px;
-        }
-
-    .row {
-        max-width: 420px;
-        width: 100%;
-    }
+label {
+    display: block;
+    margin-top: 30px;
+    font-size: 16px;
+    font-weight: 500;
 }
+
+input {
+    display: block;
+    height: 50px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    color: #080710;
+    font-weight: 300;
+}
+
+::placeholder {
+    color: #626262;
+}
+
+input[type="submit"] {
+    margin-top: 30px;
+    width: 100%;
+    background-color: #ffffff;
+    color: #080710;
+    font-size: 18px;
+    font-weight: 600;
+    vertical-align: middle;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.5s all;
+}
+
+    input[type="submit"]:hover {
+        background-color: #295D99;
+        color: #ffffff;
+    }
