--- a/CLienteMAUI/Views/TurnoView.xaml
+++ b/CLienteMAUI/Views/TurnoView.xaml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:CLienteMAUI.ViewModel"
+             xmlns:enum="clr-namespace:BancoAPI.Models.Enum"
+             xmlns:dto="clr-namespace:BancoAPI.Models.Dtos"
              x:Class="CLienteMAUI.Views.TurnoView"
+             x:DataType="vm:TurnoViewModel"
              Title="TurnoView">
 
     <ContentPage.Resources>
@@ -36,7 +40,7 @@
                                  VerticalOptions="Center">
                 <Label Text="Su turno"
                        FontSize="Medium" />
-                <Label Text="5"
+                <Label Text="{Binding Turno.Numero}"
                        FontSize="50"
                        TextColor="{StaticResource colorPrimario}" />
                 <BoxView HeightRequest="1"
@@ -50,97 +54,80 @@
         </Border>
 
 
-        <Grid Grid.Row="2"
-              RowDefinitions=".33*,.33*,.33*">
-            <Border BackgroundColor="{StaticResource colorPrimario}"
-                    Margin="0,5,0,0"
-                    StrokeThickness="0">
-                <Grid ColumnDefinitions=".5*,.5*"
-                      RowDefinitions=".4*,.6*">
 
-                    <Label Text="Turno actual"
-                           TextColor="White"
-                           FontSize="Medium" />
-                    <Label Text="Caja"
-                           Grid.Column="1"
-                           TextColor="White"
-                           FontSize="Medium" />
-                    <Label Text="10"
-                           TextColor="White"
-                           FontSize="Title"
-                           Grid.Row="1" />
-                    <Label Text="Caja 1"
-                           TextColor="White"
-                           Grid.Column="1"
-                           Grid.Row="1"
-                           FontSize="Title" />
-                    <BoxView WidthRequest="1"
-                             BackgroundColor="White"
-                             Grid.ColumnSpan="2"
-                             Grid.RowSpan="2" />
-                </Grid>
-            </Border>
-            <Border BackgroundColor="{StaticResource colorPrimario}"
-                    Grid.Row="1"
-                    Margin="0,5"
-                    StrokeThickness="0">
-                <Grid ColumnDefinitions=".5*,.5*"
-                      RowDefinitions=".4*,.6*">
+        <CollectionView ItemsSource="{Binding Cajas}"
+                        ItemSizingStrategy="MeasureAllItems"
+                        Grid.Row="2">
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="dto:CajasDto2">
+                    <Border 
+                            Margin="0,5,0,0"
+                            HeightRequest="80"
+                            StrokeThickness="0">
 
-                    <Label Text="Turno actual"
-                           TextColor="White"
-                           FontSize="Medium" />
-                    <Label Text="Caja"
-                           Grid.Column="1"
-                           TextColor="White"
-                           FontSize="Medium" />
-                    <Label Text="10"
-                           TextColor="White"
-                           FontSize="Title"
-                           Grid.Row="1" />
-                    <Label Text="Caja 2"
-                           TextColor="White"
-                           Grid.Column="1"
-                           Grid.Row="1"
-                           FontSize="Title" />
-                    <BoxView WidthRequest="1"
-                             BackgroundColor="White"
-                             Grid.ColumnSpan="2"
-                             Grid.RowSpan="2" />
-                </Grid>
-            </Border>
-            <Border BackgroundColor="{StaticResource colorPrimario}"
-                    Grid.Row="2"
-                    Margin="0,0,0,5"
-                    StrokeThickness="0">
-                <Grid ColumnDefinitions=".5*,.5*"
-                      RowDefinitions=".4*,.6*">
+                        <Border.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="Background"
+                                        Value="{StaticResource colorPrimario}" />
+                                <Style.Triggers>
+                                    <DataTrigger TargetType="Border"
+                                                 Binding="{Binding Estado}"
+                                                 Value="0">
+                                        <Setter Property="Background"
+                                                Value="Gray" />
+                                    </DataTrigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Border.Resources>
+                        
+                        <Grid ColumnDefinitions=".5*,.5*"
+                              RowDefinitions=".4*,.6*">
 
-                    <Label Text="Turno actual"
-                           TextColor="White"
-                           FontSize="Medium" />
-                    <Label Text="Caja"
-                           Grid.Column="1"
-                           TextColor="White"
-                           FontSize="Medium" />
-                    <Label Text="10"
-                           TextColor="White"
-                           FontSize="Title"
-                           Grid.Row="1" />
-                    <Label Text="Caja 3"
-                           TextColor="White"
-                           Grid.Column="1"
-                           Grid.Row="1"
-                           FontSize="Title" />
-                    <BoxView WidthRequest="1"
-                             BackgroundColor="White"
-                             Grid.ColumnSpan="2"
-                             Grid.RowSpan="2" />
-                </Grid>
-            </Border>
-        </Grid>
+                            <Label Text="Turno actual"
+                                   TextColor="White"
+                                   FontSize="Medium" />
+                            <Label Text="Caja"
+                                   Grid.Column="1"
+                                   TextColor="White"
+                                   FontSize="Medium" />
+                            <Label Text="{Binding NumeroActual}"
+                                   TextColor="White"
+                                   FontSize="Title"
+                                   Grid.Row="1" />
+                            <Label Text="{Binding Nombre}"
+                                   TextColor="White"
+                                   Grid.Column="1"
+                                   Grid.Row="1"
+                                   FontSize="Title" />
+                            <BoxView WidthRequest="1"
+                                     BackgroundColor="White"
+                                     Grid.ColumnSpan="2"
+                                     Grid.RowSpan="2" />
+                        </Grid>
+                    </Border>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
 
-        <Grid Grid.RowSpan="3" >
+
+
+
+        <Grid Grid.RowSpan="3">
+
+            <Grid.Resources>
+                <Style TargetType="Grid">
+                    <Setter Property="IsVisible"
+                            Value="False" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Turno.Estado}"
+                                     TargetType="Grid"
+                                     Value="Atendiendo">
+                            <Setter Property="IsVisible"
+                                    Value="True" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Resources>
 
             <BoxView Background="#000"
                      Opacity=".5" />
@@ -152,11 +139,19 @@
 
                 <VerticalStackLayout Spacing="20"
                                      VerticalOptions="Center">
-                    <Label Text="Pase a la caja 2"
-                           FontSize="30" />
+                    <Label FontSize="30">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="Por favor pase a la "/>
+                                <Span Text="{Binding Turno.CajaNombre}" TextColor="{StaticResource colorPrimario}" />
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
                     <Image Source="carita.png" />
                     <Button BackgroundColor="{StaticResource colorPrimario}"
-                            Text="Ok" Margin="20,0"/>
+                            Text="Ok"
+                            Command="{Binding GraciasPorSuPreferenciaCommand}"
+                            Margin="20,0" />
                 </VerticalStackLayout>
             </Border>
 
