--- a/BancoMexicoWeb/Areas/Admin/Views/Cajeros/Agregar.cshtml
+++ b/BancoMexicoWeb/Areas/Admin/Views/Cajeros/Agregar.cshtml
@@ -1,5 +1,27 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model BancoMexicoWeb.Areas.Admin.Models.AgregarCajaViewModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+<form asp-action="Agregar" method="post">
+    <div class="form-group">
+        <label asp-for="Nombre"></label>
+        <input asp-for="Nombre" class="form-control" />
+        
+    </div>
+    <div class="form-group">
+        <label asp-for="Contrasena"></label>
+        <input asp-for="Contrasena" class="form-control" />
+        
+    </div>
+    <div class="form-group">
+        <label asp-for="Estado"></label>
+        <input asp-for="Estado" class="form-control" />
+        
+    </div>
+    <div class="form-group">
+        <label asp-for="Username"></label>
+        <input asp-for="Username" class="form-control" />
+    </div>
+        <span >@Html.ValidationSummary(true)</span>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</form>    
+
