--- a/BancoMexicoWeb/Areas/Cajero/Views/Home/Index.cshtml
+++ b/BancoMexicoWeb/Areas/Cajero/Views/Home/Index.cshtml
@@ -21,6 +21,7 @@
         <div class="turno" id="turnoActual">0</div>
         <div class="buttons">
             <button id="atendiendo">Atender Cliente</button>
+            <button id="cancelar">Cancelar Turno</button>
             @* <button id="siguiente" onclick="siguiente()" disabled>Siguiente</button> *@
         </div>
     </div>
