--- a/BancoMexicoWeb/Areas/Cajero/Views/Home/Index.cshtml
+++ b/BancoMexicoWeb/Areas/Cajero/Views/Home/Index.cshtml
@@ -24,16 +24,14 @@
             <button id="cancelar">Cancelar Turno</button>
             @* <button id="siguiente" onclick="siguiente()" disabled>Siguiente</button> *@
         </div>
+        <label id="esperando">Esperando cliente...</label>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
-  
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
     <script>
         const idCaja = @User.FindFirstValue(ClaimTypes.NameIdentifier);
 
     </script>
-
-
     <script src="~/js/index.js"></script>
 </body>
 
