--- a/BancoMexicoWeb/wwwroot/css/estilos.css
+++ b/BancoMexicoWeb/wwwroot/css/estilos.css
@@ -20,7 +20,7 @@ body {
 }
 
 form {
-    height: 520px;
+    height:auto;
     width: 400px;
     background-color: #54A0F0;
     position: absolute;
