--- a/BancoMexicoWeb/Areas/Admin/Views/Cajeros/Agregar.cshtml
+++ b/BancoMexicoWeb/Areas/Admin/Views/Cajeros/Agregar.cshtml
@@ -16,8 +16,8 @@
 <body>
     <form method="post" asp-action="Agregar">
         <h3>Agregar Cajero</h3>
-        <label asp-for="Nombre"></label>
-        <input asp-for="Nombre" class="form-control" placeholder="Escribe el nombre"/>
+        <label asp-for="Nombre">Nombre de la caja</label>
+        <input asp-for="Nombre" class="form-control" placeholder="Escribe el nombre de la caja"/>
         <label for="username">Nombre de usuario:</label>
         <input type="text" id="username" placeholder="Escribe el nombre de usuario" asp-for="Username">
 
