--- a/BancoMexicoWeb/wwwroot/css/estilosCajero.css
+++ b/BancoMexicoWeb/wwwroot/css/estilosCajero.css
@@ -113,4 +113,40 @@ button {
     margin-top: 20px;
     opacity: 0;
     transition: opacity 0.5s;
+    position:relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+#loading-bar-spinner.spinner {
+    left: 100%;
+    margin-left: -50px;
+    top: 50%;
+    margin-top: -20px;
+    position: absolute;
+    z-index: 19 !important;
+    animation: loading-bar-spinner 600ms linear infinite;
+}
+
+    #loading-bar-spinner.spinner .spinner-icon {
+        width: 30px;
+        height: 30px;
+        border: solid 4px transparent;
+        border-top-color: #54A0F0 !important;
+        border-left-color: #54A0F0 !important;
+        border-radius: 50%;
+    }
+
+@keyframes loading-bar-spinner {
+    0% {
+        transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
