--- a/BancoMexicoWeb/Areas/Admin/Views/Cajeros/Agregar.cshtml
+++ b/BancoMexicoWeb/Areas/Admin/Views/Cajeros/Agregar.cshtml
@@ -27,6 +27,7 @@
         <p style="margin-top:20px">@Html.ValidationSummary(true)</p>
 
         <input type="submit" value="Agregar" />
+        <a>Cancelar</a>
 
     </form>
 </body>
