--- a/BancoMexicoWeb/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/BancoMexicoWeb/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -13,9 +13,9 @@
 
 <body>
     <header>
-        <div class="left">BancoMéxico</div>
-        <div class="left">Administrador</div>
-        <div class="center">Usuario: @User.Identity?.Name</div>
+        <label >BancoMéxico</label>
+        <label>Administrador</label>
+        <label>Usuario: @User.Identity?.Name</label>
     </header>
 
 
