--- a/CLienteMAUI/Views/TurnoView.xaml
+++ b/CLienteMAUI/Views/TurnoView.xaml
@@ -24,9 +24,9 @@
 
     </ContentPage.Resources>
 
-    <Grid RowDefinitions=".2*,.4*,.4*">
-        <Label Text="BancoMexico"
-               FontSize="40"
+    <Grid RowDefinitions=".1*,.4*,.4*,.1*">
+        <Label Text="BancoMéxico"
+               FontSize="30"
                VerticalOptions="Center"
                HorizontalOptions="Center" />
         <BoxView BackgroundColor="#D1E9FD"
@@ -39,16 +39,14 @@
             <VerticalStackLayout Spacing="10"
                                  VerticalOptions="Center">
                 <Label Text="Su turno"
-                       FontSize="Medium" />
+                       FontSize="Large" />
                 <Label Text="{Binding Turno.Numero}"
                        FontSize="50"
                        TextColor="{StaticResource colorPrimario}" />
                 <BoxView HeightRequest="1"
                          BackgroundColor="LightGray" />
-                <Label Text="Tiempo estimado de espera"
-                       FontSize="Medium" />
                 <Label Text="{Binding EstadoTurnoMensaje}"
-                       FontSize="Medium"
+                       FontSize="Subtitle"
                        TextColor="{StaticResource colorPrimario}" />
             </VerticalStackLayout>
         </Border>
@@ -56,12 +54,12 @@
 
 
         <CollectionView ItemsSource="{Binding Cajas}"
+                        VerticalOptions="Center"
                         ItemSizingStrategy="MeasureAllItems"
                         Grid.Row="2">
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="dto:CajasDto2">
-                    <Border 
-                            Margin="0,5,0,0"
+                    <Border Margin="0,5,0,0"
                             HeightRequest="80"
                             StrokeThickness="0">
 
@@ -78,15 +76,25 @@
                                     </DataTrigger>
                                 </Style.Triggers>
                             </Style>
+                            <Style TargetType="Label">
+                                <Setter Property="VerticalOptions"
+                                        Value="Start" />
+                                <Setter Property="HorizontalOptions"
+                                        Value="Center" />
+                                <Setter Property="FontFamily"
+                                        Value="Monse" />
+                            </Style>
                         </Border.Resources>
-                        
+
                         <Grid ColumnDefinitions=".5*,.5*"
                               RowDefinitions=".4*,.6*">
 
                             <Label Text="Turno actual"
+                                   VerticalOptions="Center"
                                    TextColor="White"
                                    FontSize="Medium" />
                             <Label Text="Caja"
+                                   VerticalOptions="Center"
                                    Grid.Column="1"
                                    TextColor="White"
                                    FontSize="Medium" />
@@ -97,9 +105,10 @@
                             <Label Text="{Binding Nombre}"
                                    TextColor="White"
                                    Grid.Column="1"
+                                   
                                    Grid.Row="1"
                                    FontSize="Title" />
-                            <BoxView WidthRequest="1"
+                            <BoxView WidthRequest="2"
                                      BackgroundColor="White"
                                      Grid.ColumnSpan="2"
                                      Grid.RowSpan="2" />
@@ -112,7 +121,25 @@
 
 
 
-        <Grid Grid.RowSpan="3">
+
+        <Button Grid.Row="3"
+                Padding="0"
+                Margin="20,0"
+                Text="Cancelar turno"
+                FontSize="Subtitle"
+                HeightRequest="50"
+                Command="{Binding CancelarTurnoCommand}"
+                VerticalOptions="Center"
+                BackgroundColor="#fff"
+                BorderColor="#FF0000"
+                TextColor="#FF0000"
+                BorderWidth="2" />
+
+
+
+
+
+        <Grid Grid.RowSpan="4">
 
             <Grid.Resources>
                 <Style TargetType="Grid">
@@ -129,8 +156,10 @@
                 </Style>
             </Grid.Resources>
 
-            <BoxView Background="#000"
-                     Opacity=".5" />
+            <Frame Background="#000"
+                   BorderColor="#000"
+                   CornerRadius="0"
+                   Opacity=".5" />
 
             <Border Background="#fff"
                     BackgroundColor="#fff"
@@ -142,8 +171,9 @@
                     <Label FontSize="30">
                         <Label.FormattedText>
                             <FormattedString>
-                                <Span Text="Por favor pase a la "/>
-                                <Span Text="{Binding Turno.CajaNombre}" TextColor="{StaticResource colorPrimario}" />
+                                <Span Text="Por favor pase a la " />
+                                <Span Text="{Binding Turno.CajaNombre}"
+                                      TextColor="{StaticResource colorPrimario}" />
                             </FormattedString>
                         </Label.FormattedText>
                     </Label>
@@ -168,6 +198,10 @@
         </Grid>
 
 
+
+
+
+
         <Grid Grid.RowSpan="3">
 
             <Grid.Resources>
@@ -185,8 +219,10 @@
                 </Style>
             </Grid.Resources>
 
-            <BoxView Background="#000"
-                     Opacity=".5" />
+            <Frame Background="#000"
+                  CornerRadius="0"
+                   BorderColor="#000"
+                   Opacity=".5" />
 
             <Border Background="#fff"
                     BackgroundColor="#fff"
