--- a/BancoMexicoWeb/Areas/Admin/Views/Home/Index.cshtml
+++ b/BancoMexicoWeb/Areas/Admin/Views/Home/Index.cshtml
@@ -26,6 +26,7 @@
     <table id="tabla">
         <thead>
             <tr>
+                <th>Id</th>
                 <th>Caja</th>
                 <th>Estado</th>
                 <th>Turno actual</th>
@@ -33,6 +34,7 @@
             </tr>
         </thead>
         <tbody>
+            <button id="btnEliminar" onclick="eliminarCaja(this)"><i class='bx bxs-edit-alt'></i></button>
         </tbody>
     </table>
 </section>
