--- a/BancoMexicoWeb/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/BancoMexicoWeb/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/css/estilosAdmin.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 
     <title>Document</title>
 
@@ -15,7 +17,10 @@
     <header>
         <label >BancoMéxico</label>
         <label>Administrador</label>
+        <div>
         <label>Usuario: @User.Identity?.Name</label>
+        <a href="~/Home/Logout" class="btnsalir"><i class='bx bx-log-out'></i></a>
+        </div>
     </header>
 
 
