--- a/BancoMexicoWeb/Areas/Cajero/Views/Home/Index.cshtml
+++ b/BancoMexicoWeb/Areas/Cajero/Views/Home/Index.cshtml
@@ -6,15 +6,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="~/css/estilosCajero.css" rel="stylesheet">
     <title>Cajero de Banco - Turnos</title>
 </head>
 
 <body>
     <div class="header">
-        <div class="bank-name">BancoMéxico</div>
-        <div class="bank-name" style="font-size:2.5rem">@User.Identity?.Name</div>
-        <div class="cashier-name">Cajero: @User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.Email)?.Value</div>
+        <label class="bank-name">BancoMéxico</label>
+        <label class="bank-name" style="font-size:2.5rem">@User.Identity?.Name</label>
+        <div>
+            <label class="cashier-name">Cajero: @User.Claims.FirstOrDefault(c => c.Type == ClaimTypes.Email)?.Value</label>
+            <a href="~/Home/Logout" class="btnsalir"><i class='bx bx-log-out'></i></a>
+        </div>
     </div>
     <div class="container">
         <h1>Turno que se está atendiendo</h1>
