--- a/BancoMexicoWeb/Areas/Admin/Views/Cajeros/Agregar.cshtml
+++ b/BancoMexicoWeb/Areas/Admin/Views/Cajeros/Agregar.cshtml
@@ -1,19 +1,11 @@
 ﻿@model BancoMexicoWeb.Areas.Admin.Models.AgregarCajaViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-<!DOCTYPE html>
-<html lang="en">
+@{
+    Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
+}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="~/css/estilos.css" />
-    <title>BancoMéxico</title>
 
-</head>
-
-<body>
     <form method="post" asp-action="Agregar">
         <h3>Agregar Cajero</h3>
         <label asp-for="Nombre">Nombre de la caja</label>
@@ -27,10 +19,8 @@
         <p style="margin-top:20px">@Html.ValidationSummary(true)</p>
 
         <input type="submit" value="Agregar" />
-        <a>Cancelar</a>
+        <a href="~/Admin/Home" class="btncancelar">Cancelar</a>
 
     </form>
-</body>
 
-</html>
 
