--- a/BancoMexicoWeb/wwwroot/css/estilosAdmin.css
+++ b/BancoMexicoWeb/wwwroot/css/estilosAdmin.css
@@ -101,3 +101,127 @@ tr:nth-child(even) {
         color: #295d99;
         text-align: center;
     }
+
+.background {
+    width: 430px;
+    height: 520px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+}
+
+form {
+    height: auto;
+    width: 400px;
+    background-color: #54A0F0;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    padding: 50px 35px;
+}
+
+    form * {
+        font-family: 'Poppins', sans-serif;
+        color: #ffffff;
+        letter-spacing: 0.5px;
+        outline: none;
+        border: none;
+    }
+
+    form h3 {
+        font-size: 32px;
+        font-weight: 500;
+        line-height: 42px;
+        text-align: center;
+    }
+
+/*label {
+    display: block;
+    margin-top: 30px;
+    font-size: 16px;
+    font-weight: 500;
+}*/
+
+input{
+    display: block;
+    height: 50px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    color: #080710;
+    font-weight: 300;
+}
+
+::placeholder {
+    color: #626262;
+}
+
+input[type="submit"] {
+    margin-top: 30px;
+    width: 100%;
+    background-color: #ffffff;
+    color: #080710;
+    font-size: 18px;
+    font-weight: 600;
+    vertical-align: middle;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.5s all;
+}
+
+    input[type="submit"]:hover, .btncancelar:hover {
+        background-color: #295D99;
+        color: #ffffff;
+    }
+
+.btncancelar {
+    display: block;
+    height: 50px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 3px;
+    margin-top: 8px;
+    font-weight: 600;
+    text-decoration: none;
+    text-align: center;
+    line-height: 50px;
+    font-size: 18px;
+    color: #000;
+    transition: 0.5s all;
+}
+
+.btnsalir{
+    margin-left:15px;
+    vertical-align: middle;
+    color: #fff;
+}
+.btnsalir i{
+    font-size: 30px;
+    color: #fff;
+}
+#btnEliminar{
+    width:35px;
+    height:35px;
+    background-color: #fff;
+    border-radius: 2px;
+    display:none;
+    border: none;
+    transition: 0.2s all;
+}
+
+    #btnEliminar:hover{
+       transform: scale(1.2);
+    }
+
+    #btnEliminar i {
+        color: #295D99;
+        font-size: 20px;
+        vertical-align: middle;
+    }
