--- a/CLienteMAUI/Views/InicioView.xaml
+++ b/CLienteMAUI/Views/InicioView.xaml
@@ -3,12 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:CLienteMAUI.ViewModel"
              Shell.NavBarIsVisible="False"
+             xmlns:zxing="clr-namespace:ZXing.Net.Maui.Controls;assembly=ZXing.Net.MAUI.Controls"
              x:Class="CLienteMAUI.Views.InicioView"
              x:DataType="vm:TurnoViewModel"
              Title="InicioView">
 
-    <VerticalStackLayout Spacing="20"
-                         VerticalOptions="Center">
+    <Grid>
         <Label Text="BancoMéxico"
                FontSize="40"
                VerticalOptions="Center"
@@ -23,12 +23,26 @@
                 WidthRequest="300"
                 FontSize="Subtitle"
                 Padding="0,20"
+                Clicked="Button_Clicked"
+                BackgroundColor="{StaticResource colorPrimario}">
+
+
+        
+
+            <!--<Button Text="Pedir turno"
+                WidthRequest="300"
+                FontSize="Subtitle"
+                Padding="0,20"
                 Command="{Binding GenerarTurnoCommand}"
                 CommandParameter="Turno"
-                BackgroundColor="{StaticResource colorPrimario}">
+                BackgroundColor="{StaticResource colorPrimario}">-->
         </Button>
+
+
+        
+        
         <ActivityIndicator IsRunning="{Binding IsLoading}"
                            Margin="0,20,0,0"
                            Color="{StaticResource colorPrimario}" />
-    </VerticalStackLayout>
+    </Grid>
 </ContentPage>
